# paper-research

./: .gitignore  .pre-commit-config.yaml  AGENT.md  README.md  pyproject.toml  setup_task.ps1
.claude/: settings.json
config/: keywords.json  settings.example.json
docs/examples/deep_read_example/: deep_read_example.md
docs/examples/skim_example/: skim_example.md
src/: __init__.py  commands.py  config.py  db.py  main.py  notify.py
src/agents/: __init__.py  base.py  note_agent.py  paper_scorer.py  parser.py  short_info.py
src/network/: __init__.py  arxiv.py  base.py  factory.py  fetch_pipeline.py
src/serve/: __init__.py  renderer.py  server.py
static/: app.js  style.css
templates/: _fetch_modal.html  note_detail.html  notes_index.html  summary.html
tests/: conftest.py  test_commands.py  test_commands_coverage.py  test_config.py  test_db.py  test_main.py  test_notify.py
tests/agents/: test_base.py  test_paper_scorer.py
tests/network/: __init__.py  test_arxiv.py  test_factory.py  test_fetch_pipeline.py
tests/serve/: test_renderer.py  test_server.py
